Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
-  "store_id": 51336,
-  "name": "mentoriaparamulheres",
   "domain": "mentoriaparamulheres.netlify.app",
-  "short_name": "mentoriaparamulheres",
-  "description": "mentoriaparamulheres",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "currency_symbol": "R$",
+  "primary_color": "#50141d",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/mentoriaparamulheres",
+  "logo": "/img/uploads/mentoria-logo.png",
+  "name": "Curso - Mentoria Para Mulheres",
+  "short_name": "mentoriaparamulheres",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
+  "mini_logo": "",
+  "font_family": "Poppins",
+  "favicon": "/img/uploads/borboleta2-img-4261653-20210823111751.png",
+  "icons_font": "feather-icons",
   "country_code": "BR",
-  "repository": "ecomplus-stores/mentoriaparamulheres",
-  "icons_font": "_",
-  "font_family": "_"
+  "secondary_color": "#d98faa",
+  "icon": "/img/uploads/borboleta2-img-4261653-20210823111751.png",
+  "store_id": 51336,
+  "description": "Lojinha do curso Mentoria Para Mulheres - Conectando Mente e Coração.\n🦋 Fique livre dos MEDOS, das DORES e dos TRAUMAS que te impedem de VOAR. 🦋",
+  "large_icon": "/img/uploads/borboleta2-img-4261653-20210823111751.png"
 }
